曜日を月曜開始固定に変更

--- a/スプリント計画補助.md
+++ b/スプリント計画補助.md
@@ -3,16 +3,14 @@
 /***** 設定（最小） **************************************************/
 const START_DATE = "2025-08-04";  // この日を含む週から
 const WEEKS      = 2;             // 2週間分
-const MON_START  = true;          // 週の開始：月曜=true / 日曜=false
 /*********************************************************************/
 
-const LABELS = MON_START ? ["月","火","水","木","金","土","日"]
-                         : ["日","月","火","水","木","金","土"];
+const LABELS = ["月","火","水","木","金","土","日"];
 const toArr = v => v?.array ? v.array() : Array.from(v ?? []);
 
 // 週初日の計算（Dataview 日付型のみ）
 function startOfWeek(d){
-  const want = MON_START ? 1 : 7;                   // 1=月,7=日
+  const want = 1;                                   // 1=月曜日
   const delta = (d.weekday - want + 7) % 7;         // weekday:1..7
   return d.minus({ days: delta });
 }
