入力欄を追加

--- a/スプリント計画補助.md
+++ b/スプリント計画補助.md
@@ -1,7 +1,20 @@
+---
+start_date: 2025-08-04
+---
 
 ```dataviewjs
 /***** 設定（最小） **************************************************/
-const START_DATE = "2025-08-04";  // この日を含む週から
+// フロントマターから開始日を動的に読み取り
+let START_DATE = "2025-08-04";  // デフォルト値
+try {
+  const currentFile = dv.current();
+  if (currentFile && currentFile.start_date) {
+    START_DATE = currentFile.start_date;
+  }
+} catch (error) {
+  // エラーが発生した場合はデフォルト値を使用
+  console.log("開始日の読み取りでエラーが発生しました:", error);
+}
 const WEEKS      = 2;             // 2週間分
 /*********************************************************************/
 
