開始日に変更

--- a/スプリント計画補助.md
+++ b/スプリント計画補助.md
@@ -1,20 +1,11 @@
 ---
-start_date: 2025-08-04
+開始日: 2025-08-04
 ---
 
 ```dataviewjs
 /***** 設定（最小） **************************************************/
-// フロントマターから開始日を動的に読み取り
-let START_DATE = "2025-08-04";  // デフォルト値
-try {
-  const currentFile = dv.current();
-  if (currentFile && currentFile.start_date) {
-    START_DATE = currentFile.start_date;
-  }
-} catch (error) {
-  // エラーが発生した場合はデフォルト値を使用
-  console.log("開始日の読み取りでエラーが発生しました:", error);
-}
+// プロパティ「開始日」を読む（なければ既定日）
+const START_DATE = dv.current()?.["開始日"] ?? "2025-08-04";
 const WEEKS      = 2;             // 2週間分
 /*********************************************************************/
 
