説明文追加

--- a/スプリント計画補助.md
+++ b/スプリント計画補助.md
@@ -1,6 +1,11 @@
 ---
 開始日: 2025-08-04
 ---
+# 使い方
+1. プロパティの「開始日」にスプリント開始日を入れる
+2. 「タスク名 xh 日付::  yyyy-mm-dd」を任意の場所に入力する
+3. 文書内の何もないところをクリックしてフォーカスを外す
+4. 該当スプリント内のタスクがカレンダー上に表示される
 
 ```dataviewjs
 /***** 設定（最小） **************************************************/
