説明文更新

--- a/スプリント計画補助.md
+++ b/スプリント計画補助.md
@@ -3,7 +3,7 @@
 ---
 # 使い方
 1. プロパティの「開始日」にスプリント開始日を入れる
-2. 「タスク名 xh 日付::  yyyy-mm-dd」を任意の場所に入力する
+2. 「タスク名 {n}h 日付:: {YYYY-MM-DD}」を任意の場所に入力する
 3. 文書内の何もないところをクリックしてフォーカスを外す
 4. 該当スプリント内のタスクがカレンダー上に表示される
 
