Feature/input field (#1)
* 入力欄を追加

* 開始日に変更

* 説明文追加

* 説明文更新

--- a/スプリント計画補助.md
+++ b/スプリント計画補助.md
@@ -1,7 +1,16 @@
+---
+開始日: 2025-08-04
+---
+# 使い方
+1. プロパティの「開始日」にスプリント開始日を入れる
+2. 「タスク名 {n}h 日付:: {YYYY-MM-DD}」を任意の場所に入力する
+3. 文書内の何もないところをクリックしてフォーカスを外す
+4. 該当スプリント内のタスクがカレンダー上に表示される
 
 ```dataviewjs
 /***** 設定（最小） **************************************************/
-const START_DATE = "2025-08-04";  // この日を含む週から
+// プロパティ「開始日」を読む（なければ既定日）
+const START_DATE = dv.current()?.["開始日"] ?? "2025-08-04";
 const WEEKS      = 2;             // 2週間分
 /*********************************************************************/
 
