--- a/スプリント計画補助.md
+++ b/スプリント計画補助.md
@@ -62,7 +62,8 @@ function cellFor(day){
 
   const lines = items.map(t => pretty(t));
   const mins  = sumMinutes(items);
-  const total = mins > 0 ? `<br><b>合計: ${(mins/60).toFixed(2)}h</b>` : "";
+  const hours = mins / 60;
+  const total = mins > 0 ? `<br><b>合計: ${hours % 1 === 0 ? Math.floor(hours) : parseFloat(hours.toFixed(2))}h</b>` : "";
   return lines.join("<br>") + total;
 }
 
@@ -98,8 +99,8 @@ for (let w=0; w<WEEKS; w++){
 
 - [ ] 会議 2.75h 日付::  2025-08-04
 - [ ] 製造 3.25h 日付::2025-08-05
-- [ ] テスト仕様書作成 2.25h 日付::2025-08-06
-- [ ] テスト仕様書作成 0.5h 日付::2025-08-06
+- [ ] テスト仕様書作成 2h 日付::2025-08-06
+- [ ] テスト仕様書作成 0.75h 日付::2025-08-06
 - [ ] レビュー 2h 日付::2025-08-07
 - [ ] テスト修正 7h 日付::2025-08-07
 - [ ] ドキュメント修正 3h 日付::2025-08-11
