--- a/スプリント計画補助.md
+++ b/スプリント計画補助.md
@@ -34,18 +34,14 @@ function getDateStr(t){
   return m ? m[1] : null;
 }
 
-// 工数の合計（"工数:: 2h30m" / "2h" / "90m" などを足す）
+// 工数の合計（"工数:: 2.5h" / "2h" / "0.5h" などを足す）
 function sumMinutes(items){
   let total = 0;
   for (const t of items){
     const s = (t.text || "");
     let m;
-    if ((m = s.match(/工数::\s*(\d+)\s*h\s*(\d+)\s*m/i)))      total += (+m[1])*60 + (+m[2]);
-    else if ((m = s.match(/工数::\s*(\d+)\s*h/i)))             total += (+m[1])*60;
-    else if ((m = s.match(/工数::\s*(\d+)\s*m/i)))             total += (+m[1]);
-    else if ((m = s.match(/(\d+)\s*h\s*(\d+)\s*m/i)))          total += (+m[1])*60 + (+m[2]);
-    else if ((m = s.match(/(\d+)\s*h/i)))                      total += (+m[1])*60;
-    else if ((m = s.match(/(\d+)\s*m/i)))                      total += (+m[1]);
+    if ((m = s.match(/工数::\s*(\d+(?:\.\d+)?)\s*h/i)))                  total += (+m[1])*60;
+    else if ((m = s.match(/(\d+(?:\.\d+)?)\s*h/i)))                      total += (+m[1])*60;
   }
   return total;
 }
@@ -66,7 +62,8 @@ function cellFor(day){
 
   const lines = items.map(t => pretty(t));
   const mins  = sumMinutes(items);
-  const total = mins > 0 ? `<br><b>合計: ${Math.floor(mins/60)}h${mins%60? (mins%60+"m"):""}</b>` : "";
+  const hours = mins / 60;
+  const total = mins > 0 ? `<br><b>合計: ${hours % 1 === 0 ? Math.floor(hours) : parseFloat(hours.toFixed(2))}h</b>` : "";
   return lines.join("<br>") + total;
 }
 
@@ -100,11 +97,11 @@ for (let w=0; w<WEEKS; w++){
 }
 ```
 
-- [ ] 会議 2h 日付::  2025-08-04
-- [ ] 製造 3h 日付::2025-08-04
-- [ ] テスト仕様書作成 2h 日付::2025-08-04
-- [ ] テスト仕様書作成 7h 日付::2025-08-05
-- [ ] レビュー 2h 日付::2025-08-06
+- [ ] 会議 2.75h 日付::  2025-08-04
+- [ ] 製造 3.25h 日付::2025-08-05
+- [ ] テスト仕様書作成 2h 日付::2025-08-06
+- [ ] テスト仕様書作成 0.75h 日付::2025-08-06
+- [ ] レビュー 2h 日付::2025-08-07
 - [ ] テスト修正 7h 日付::2025-08-07
 - [ ] ドキュメント修正 3h 日付::2025-08-11
 - [ ] 実装作業 2h 日付::2025-08-12
